# pour

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: CNAME  index.html  readme.html
docs/00-index/: architecture.html  notes.html  references.html  specs.html  stories.html
docs/01-concepts/: inline-note-creation.html  the-3-tier-data-fallback.html
docs/02-references/: chrono.html  crossterm.html  field-types.html  obsidian-local-rest-api-openapi.html  obsidian-local-rest-api.html  ratatui.html  reqwest.html  toml-serde.html
docs/03-guides/: design-language.html  guide-adding-new-field-types.html
docs/04-architecture/: pour-design-spec.html  system-architecture-overview.html  v1-implementation-plan.html
docs/05-notes/: dedicated-terminal-homepage.md  sprint-1-foundation-report.html  sprint-2-transport-report.html
docs/07-stories/: the_pour_manifesto.html
docs/08-specs/: pour-design-spec.html
docs/09-milestones/: v1.0.0-release.html
docs/site-lib/: metadata.json  rss.xml  search-index.json
pour - docs/: README.md  index.md
pour - docs/.obsidian/: community-plugins.json  graph.json  workspace.json
pour - docs/00 index/: ARCHITECTURE.md  NOTES.md  SPECS.md  (+2 more)
resources/: default_config.toml  mads_config.toml
src/: app.rs  autocreate.rs  config.rs  init.rs  lib.rs  main.rs  util.rs  visibility.rs
tests/: app.rs  app_configure.rs  app_subform.rs  autocreate.rs  config.rs  config_update.rs  data_history.rs  init.rs  main.rs  tui_dashboard.rs  tui_event_dispatch.rs  tui_form.rs  tui_summary.rs  visibility.rs
(+74 files in other folders)
