[package]
name = "pour"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pour"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
