[package]
name = "pour"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pour"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
open = "5"
percent-encoding = "2"
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
